change style and base commit

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,9 +158,7 @@ button a {
 }
 
 .side-bar-content {
-  background: image-url('bw-city.jpg');
-  background-size: cover;
-  // background-color: darken($light, 10%);
+  background-color: darken($light, 10%);
 }
 
 #my-sidebar-content {
