change some styles, resize images for quicker renders, safe commit before tweaking the 'create team' feature to allow adding members

--- a/app/views/home/_slideshow.html.erb
+++ b/app/views/home/_slideshow.html.erb
@@ -1,6 +1,6 @@
 <div class="hero-slideshow my-slideshow">
   <div class="images">
-    <%= image_tag "forest.jpg", class: "1 active" %>
+    <%= image_tag "teamwork.jpg", class: "1 active" %>
     <%= image_tag "girl.jpg", class: "2" %>
     <%= image_tag "palms-dark.jpg", class: "3" %>
     <%= image_tag "hills.jpg", class: "4" %>
