--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,15 +19,15 @@
 
 <div class="hero-slideshow" id="home-slideshow">
   <div class="images">
-    <%= image_tag "forest.jpg", class: "1 active" %>
-    <%= image_tag "girl.jpg", class: "2" %>
-    <%= image_tag "palms-dark.png", class: "3" %>
-    <%= image_tag "girl-2.jpg", class: "4" %>
+    <%= image_tag "teamwork.jpg", class: "1 active overlay-img" %>
+    <%= image_tag "palms-dark.png", class: "2" %>
+    <%= image_tag "girl.jpg", class: "3" %>
+    <%= image_tag "forest.jpg", class: "4" %>
   </div>
   <div class="right-arrow"></div>
   <div class="left-arrow"></div>
-  <div class="hero-text text-center">
-    <h2 class="text-light">Slideshow Text</h2>
+  <div class="hero-text text-center after">
+    <h2 class="text-light">Get the job done.</h2>
     <h6 class="text-light">This is more text lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h6>
     <div class="circles">
       <div class="circle 1 active"></div>
