--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -202,3 +202,31 @@ button a {
   // box-shadow: $small-box-shadow;
   border-bottom: 1px $light solid;
 }
+
+.user-info-column, .user-teams-column {
+  color: $light;
+  height: 100vh;
+  max-height: 100vh;
+  background-color: $md-grey;
+  padding-top: 15vh;
+  margin: 0px;
+  text-align: center;
+}
+
+.profile-picture {
+  height: 30vh;
+  border-radius: 100px;
+  img {
+    width: 100%;
+    height: 100%;
+    border-radius: 500px;
+  }
+}
+
+.user-teams-column {
+  overflow-y: scroll;
+  background-color: darken($md-grey, 10%);
+  .f-row .f-col-3 {
+    text-align: center;
+  }
+}
