--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,13 +8,14 @@
   <div class="f-col-3 user-teams-column">
     <div class="f-row responsive">
       <div class="f-col-3">
-        <h1>Administrated Teams</h1>
+        <h1>Administrated Teams ( <%= @owned_teams.count %> )</h1>
         <% @owned_teams.each do |team| %>
           <h4><%= link_to team.name, team_path(team) %></h4>
         <% end %>
       </div>
       <div class="f-col-3">
         <h1>Friends</h1>
+        <h4>(Coming Soon)</h4>
       </div>
     </div>
   </div>
