--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,6 +158,7 @@ button a {
 }
 
 .side-bar-content {
+  min-width: 100vw;
   background-color: darken($light, 10%);
 }
 
@@ -186,7 +187,19 @@ button a {
   max-height: 50vh;
   min-height: 50vh;
   overflow-y: scroll;
+  border-right: 0px;
+  margin-right: 0px;
   background-color: darken($light, 40%);
+  .messages-list {
+    width: 100% !important;
+    .message-row {
+      width: 100% !important;
+      .f-col-3 {
+        width: 100% !important;
+      }
+    }
+  }
+
 }
 
 .current-user-message-col {
